// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/audit_table/audit_row/AuditRow should match snapshot with channel audit 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="AuditRow"
      >
        <td>
          <div>
            <div>
              Aug 11, 1971
            </div>
            <div>
              05:01 PM
            </div>
          </div>
        </td>
        <td>
          test@example.com
        </td>
        <td
          class="AuditRowDesc"
        >
          Channels default-name
        </td>
        <td>
          ::1
        </td>
        <td>
          hb8febm9ytdiz8zqaxj18efqhy
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`components/audit_table/audit_row/AuditRow should match snapshot with user audit 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="AuditRow"
      >
        <td>
          <div>
            <div>
              Aug 14, 1971
            </div>
            <div>
              09:32 PM
            </div>
          </div>
        </td>
        <td>
          test@example.com
        </td>
        <td
          class="AuditRowDesc"
        >
          Successfully logged in
        </td>
        <td>
          ::1
        </td>
        <td />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`components/audit_table/audit_row/AuditRow should match snapshot with user audit 2`] = `
<div>
  <table>
    <tbody>
      <tr
        class="AuditRow"
      >
        <td>
          <div>
            <div>
              Aug 14, 1971
            </div>
            <div>
              09:32 PM
            </div>
          </div>
        </td>
        <td>
          test@example.com
        </td>
        <td
          class="AuditRowDesc"
        >
          Attempted to register a new OAuth Application with ID client_id
        </td>
        <td>
          ::1
        </td>
        <td />
      </tr>
    </tbody>
  </table>
</div>
`;
